# sdtool

./: CMakeLists.txt  README.md  app.overlay  prj.conf
src/: GPATH  GRTAGS  GTAGS  NppGTags.cfg  main.c  shell.cpp  types.h
